--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.21.1",
+    "ava": "^3.15.0",
     "cross-env": "^7.0.2",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
