--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ava": "^3.15.0",
+    "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
